# shopifake

./: .gitignore  README.md  docker-compose.yml  pre-commit-lint.sh  test-auth-service.ps1
.github/workflows/: api-gateway-ci.yml  auth-service-ci.yml  cd.yml  chatbot-service-ci.yml  ci.yml  lint.yml  tetst.yml
backend/api-gateway/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pom.xml
backend/api-gateway/src/main/java/shopifake/api_gateway/: ApiGatewayApplication.java
backend/api-gateway/src/main/java/shopifake/api_gateway/config/: WebClientConfig.java
backend/api-gateway/src/main/java/shopifake/api_gateway/controller/: GatewayController.java
backend/api-gateway/src/main/resources/: application.yaml
backend/api-gateway/src/test/java/shopifake/api_gateway/: ApiGatewayApplicationTests.java
backend/auth-service/: Dockerfile  README.md  pom.xml
backend/auth-service/keycloak/: realm-export.json
backend/auth-service/src/main/java/com/shopifake/auth/: AuthServiceApplication.java
backend/auth-service/src/main/java/com/shopifake/auth/config/: KeycloakConfig.java  SecurityConfig.java
backend/auth-service/src/main/java/com/shopifake/auth/controller/: AuthController.java  UserController.java
backend/auth-service/src/main/java/com/shopifake/auth/dto/: AuthResponse.java  LoginRequest.java  RegisterRequest.java
backend/auth-service/src/main/java/com/shopifake/auth/service/: AuthService.java
backend/auth-service/src/main/resources/: application.properties  application.yml
backend/auth-service/src/test/: README.md
backend/auth-service/src/test/java/com/shopifake/auth/controller/: AuthControllerTest.java  TestSecurityConfig.java  UserControllerTest.java
backend/auth-service/src/test/java/com/shopifake/auth/service/: AuthServiceTest.java
backend/chatbot-service/: .dockerignore  .gitignore  CI_INTEGRATION.md  DOCKER_GUIDE.md  Dockerfile  LINTER_GUIDE.md  PRE_COMMIT_STEPS.md  README.md  app.py  mistral.py  pre-commit-lint.bat  pre-commit-lint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  train_nlu.py
backend/chatbot-service/data/: faq.json
backend/chatbot-service/model/: nlu_model.pkl
backend/eureka-server/: Dockerfile
