# ============================================================================
# Python Project Configuration
# ============================================================================
# This file configures Ruff (linter/formatter) and Mypy (type checker)
# for the chatbot microservice.

[project]
name = "chatbot-service"
version = "1.0.0"
description = "FastAPI chatbot NLU service"
requires-python = ">=3.12"


# ============================================================================
# RUFF CONFIGURATION - Fast Python Linter & Formatter
# ============================================================================
[tool.ruff]
# Maximum line length before wrapping
# 88 = Black default, 100 = balanced, 120 = relaxed
line-length = 100

# Target Python version (affects which syntax features are allowed)
target-version = "py312"

# Directories/files to exclude from linting
exclude = [
    ".venv",           # Virtual environment
    "venv",
    "__pycache__",     # Python cache
    "*.pyc",
    ".git",
    ".pytest_cache",
    "model/*.pkl",     # ML model files
    "*.egg-info",
]


# ============================================================================
# RUFF LINTING RULES
# ============================================================================
[tool.ruff.lint]
# Enable these rule categories:
select = [
    "E",      # pycodestyle errors (PEP 8 style violations)
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (logical errors like unused imports)
    "I",      # isort (import sorting and organization)
    "N",      # pep8-naming (naming conventions)
    "UP",     # pyupgrade (modernize Python syntax)
    "B",      # flake8-bugbear (find likely bugs)
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "SIM",    # flake8-simplify (simplify code logic)
    "RUF",    # Ruff-specific rules
]

# Disable these specific rules:
ignore = [
    "E501",   # Line too long - let the formatter handle this automatically
    "B008",   # Function call in default argument - needed for FastAPI Depends()
    "SIM108", # Use ternary operator - sometimes if/else is clearer
]

# Allow autofix for all enabled rules (when running `ruff check --fix`)
fixable = ["ALL"]
unfixable = []

# Allow unused variables that start with underscore (e.g., _unused)
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# ============================================================================
# RUFF: PER-FILE RULE IGNORES
# ============================================================================
[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py (often used for re-exporting)
"__init__.py" = ["F401"]

# Allow print statements in training scripts
"train_nlu.py" = ["T201"]


# ============================================================================
# RUFF: IMPORT SORTING (isort replacement)
# ============================================================================
[tool.ruff.lint.isort]
# Your package name(s) - these will be sorted into "first-party" section
known-first-party = ["chatbot_service"]

# Order of import sections:
# 1. future    → from __future__ import ...
# 2. standard  → import json, from pathlib import Path
# 3. third     → from fastapi import FastAPI
# 4. first     → from chatbot_service import utils
# 5. local     → from . import helpers
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

# Add blank line between import sections
lines-after-imports = 2


# ============================================================================
# RUFF: CODE FORMATTING
# ============================================================================
[tool.ruff.format]
# Use double quotes for strings (can also be "single")
quote-style = "double"

# Indent with spaces (not tabs)
indent-style = "space"

# Keep magic trailing comma (helps with git diffs)
skip-magic-trailing-comma = false

# Auto-detect line endings (\n on Linux/Mac, \r\n on Windows)
line-ending = "auto"


# ============================================================================
# MYPY CONFIGURATION - Static Type Checker
# ============================================================================
[tool.mypy]
# Match your Python version
python_version = "3.12"

# Where to look for Python files
files = ["app.py", "train_nlu.py"]

# STRICTNESS SETTINGS
# Starting with medium strictness - you can increase this later
disallow_untyped_defs = false          # Don't require type hints everywhere (yet)
check_untyped_defs = true              # But check functions that DO have types
disallow_any_unimported = false        # Allow 'Any' from untyped imports
disallow_any_expr = false              # Allow expressions typed as 'Any'
no_implicit_optional = true            # Explicit Optional[X] instead of X | None
warn_redundant_casts = true            # Warn about unnecessary type casts
warn_unused_ignores = true             # Warn about unused '# type: ignore'
warn_return_any = true                 # Warn if function returns 'Any'
warn_unreachable = true                # Warn about unreachable code
strict_equality = true                 # Strict equality checks (==, !=)

# HELPFUL WARNINGS
warn_unused_configs = true             # Warn about unused mypy configs
show_error_codes = true                # Show error codes like [arg-type]
pretty = true                          # Nicer error formatting

# ERROR REPORTING
show_column_numbers = true             # Show column numbers in errors
show_error_context = true              # Show code context in errors


# ============================================================================
# MYPY: THIRD-PARTY LIBRARY OVERRIDES
# ============================================================================
# Some libraries don't have type stubs, so we ignore missing imports
# This prevents mypy from complaining about them

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true


# ============================================================================
# HOW TO USE
# ============================================================================
# Format code:        .venv/bin/ruff format .
# Check linting:      .venv/bin/ruff check .
# Auto-fix issues:    .venv/bin/ruff check --fix .
# Type check:         .venv/bin/mypy .
# Run all:            .venv/bin/ruff format . && .venv/bin/ruff check . && .venv/bin/mypy .
